2006-05-18  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/linux/lnx_pci.c:
	Bug #6377: Ignore disabled BARs, and allow matching BARs 
	aligned to less than 16 bytes. (Felix Kühling, ATI)

2006-05-18  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/linux/lnx_acpi.c:
	Bug #5877: Avoid burning CPU when acpid dies. Require acpid to 
	be running for ACPI support on Linux. Minor errno handling 
	fixes. (Valery Inozemtsev, Adam Jackson)

2006-05-18  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbcompose.c:
	Bug #6827: Fix texel fetch in fbFetchTransformed to avoid 
	crashes. Still not 100% correct, but better than 7.0. (Radek 
	Doulik, Matthias Hopf)

2006-05-17  Daniel Stone  <daniel@freedesktop.org>

	* hw/xfree86/dixmods/Makefile.am:
	Make DBE support conditional.  (Enrico Wiegelt)

	* hw/xfree86/loader/xf86sym.c:
	Make Xv symbols conditional.  (Enrico Wiegelt)

2006-05-15  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/os-support/linux/lnx_acpi.c:
	Bug #5209: Fix APM/ACPI support, again. (Michel Dänzer, Valery 
	Inozemtsev)

2006-05-14  Matthieu Herrb <matthieu.herrb@laas.fr>

	* configure.ac:
	Don't use AM_CONDITIONAL inside shell conditionals.
	Bugzilla #6916.

Fri May 12 17:51:26 2006  Søren Sandmann  <sandmann@redhat.com>

	* Xext/sync.c (SyncDeleteTriggerFromCounter): Keep track of the
	previous item and update its next pointer when deleting from the
	linked list.

2006-05-11  Matthias Hopf  <mhopf@suse.de>

	* fb/fbpict.c: (fbComposite):
	Bug #5796: Wrong fastpath selection for repeating sources.

2006-05-11  Matthias Hopf  <mhopf@suse.de>

	* hw/xfree86/xaa/xaaPict.c: (XAAComposite):
	Bug #4320: Improved XAA Composite fastpath.

2006-05-10  Adam Jackson  <ajax@freedesktop.org>

	* record/record.c:
	Bug #3561: Crash fix in the Record extension. (Paul Anderson)

2006-05-09  Adam Jackson  <ajax@freedesktop.org>

	* render/render.c:
	Bug #6867: Yet another Render crash fix. (Michel Dänzer)
